Modify the documents format.

--- a/_posts/2020-11-1-MILAD工作站使用说明（2020.11.1更新）.md
+++ b/_posts/2020-11-1-MILAD工作站使用说明（2020.11.1更新）.md
@@ -1,9 +1,12 @@
 ---
 layout: post
-title: "MILAD工作站使用说明（2020.11.3更新）"
+title:  Guideline of MILAD（Updated on 2020.11.3）
 date:   2020-11-3
-categories: 工作站
-toc: true
+author:     Leo
+header-img: img/post_bao_yan.jpg
+catalog: true
+tags:
+    - Workstation
 ---
 * 目录  
 {:toc #markdown-toc}
