更新了MILAD使用说明并添加了管理员手册

--- a/_posts/2020-11-1-MILAD工作站使用说明.md
+++ b/_posts/2020-11-1-MILAD工作站使用说明.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  Guideline of MILAD（Updated on 2020.11.3）
-date:   2020-11-3
+title:  Guideline of MILAD（Updated on 2020.11.4）
+date:   2020-11-4
 author:     Leo
 header-img: img/post_bao_yan.jpg
 catalog: true
@@ -14,7 +14,7 @@ tags:
 
 本说明适用放于609A室的MILAD工作站。本工作站提供桌面环境xrdp和SSH方式连接，xrdp显示动画比较卡，强烈推荐使用SSH！
 
-***更新**：本机主要已安装环境：*
+本机主要已安装环境：
 
 |     |  版本  |  
 |  ----  | ----  |  
@@ -33,9 +33,7 @@ tags:
 | 3  | huihuang | no | 陈辉煌 |
 | 4  | ligang | no | 李港 |
 
-申请账号请联系任何有root权限的用户。
-
-***更新**：安装python依赖时需要root权限请及时联系本人。*
+申请账号请联系任何有root权限的用户。安装python依赖时需要root权限请及时联系本人。
 
 ## 连接方式
 ### SSH连接
@@ -62,5 +60,26 @@ tags:
 在配置python时，请尽量使用`pip3 install --user packagename`安装库，将库只安装在自己的环境中。
 
 若使用`sudo pip3 install packagename`，库会全局安装，可能会污染别的用户的环境。
+
+## 使用SSH传输文件
+1. 从服务器上下载test.txt文件到本地的Documents中
+
+`$scp lihua@192.168.1.152:/home/lihua/test.txt /Documents`或`$scp lihua@192.168.1.152:test.txt /Users/lihua/Documents`
+
+如果远程服务器防火墙有为scp命令设置了指定的端口，我们需要使用 -P 参数来设置命令的端口号，命令格式如下：
+
+`$scp -P 50411 lihua@225g242r14.iok.la:test.txt /Users/lihua/Documents`
+
+2. 上传本地文件到服务器
+
+`$scp /Users/lihua/Documents/test.txt lihua@192.168.1.152:/home/lihua`
+
+3. 从服务器下载整个目录
+
+`$scp -r lihua@192.168.1.152:program /Documents`
+
+4. 上传目录到服务器
+
+`$scp -r /Users/lihua/Documents/program lihua@192.168.1.152:/home/lihua`
 
 ## VNC远程桌面尝试部署中···
