--- a/_posts/2020-11-1-MILAD工作站使用说明.md
+++ b/_posts/2020-11-1-MILAD工作站使用说明.md
@@ -63,7 +63,7 @@ tags:
 
 ## 使用SSH传输文件
 
-1. 从服务器上下载test.txt文件到本地的Documents中
+从服务器上下载test.txt文件到本地的Documents中：
 
 `$scp lihua@192.168.1.152:/home/lihua/test.txt /Documents`或`$scp lihua@192.168.1.152:test.txt /Users/lihua/Documents`
 
@@ -71,16 +71,34 @@ tags:
 
 `$scp -P 50411 lihua@225g242r14.iok.la:test.txt /Users/lihua/Documents`
 
-2. 上传本地文件到服务器
+上传本地文件到服务器：
 
 `$scp /Users/lihua/Documents/test.txt lihua@192.168.1.152:/home/lihua`
 
-3. 从服务器下载整个目录
+从服务器下载整个目录：
 
 `$scp -r lihua@192.168.1.152:program /Documents`
 
-4. 上传目录到服务器
+上传目录到服务器：
 
 `$scp -r /Users/lihua/Documents/program lihua@192.168.1.152:/home/lihua`
+
+## ubuntu创建和删除文件和文件夹
+
+创建test.txt文件：
+
+`$touch test.txt`
+
+删除test.txt文件：
+
+`$rm test.txt`
+
+创建test文件夹：
+
+`$mkdir test`
+
+删除test文件夹：
+
+`$rm -r test`
 
 ## VNC远程桌面尝试部署中···
