--- a/_posts/2020-11-13-ATOMO.md
+++ b/_posts/2020-11-13-ATOMO.md
@@ -69,11 +69,11 @@ $$
 $$
 \hat{g}=\sum_{i=1}^n\frac{\lambda_it_i}{p_i}a_i
 $$
-其中$t_i\sim Bernoulli(p_i)，0<p_i\leq 1$。我们称这个稀疏结构为*原子稀疏*。请注意，$t_i$是相互独立的。之前我们假设$\Vert a_i\Vert^2=1$。
+其中$t_i\vim \text{Bernoulli}(p_i)$，$0<p_i\leq 1$。我们称这个稀疏结构为*原子稀疏*。请注意，$t_i$是相互独立的。之前我们假设$\Vert a_i\Vert^2=1$。
 
-引理1:$\mathbb{E}[\hat{g}]=g$且$\mathbb{E}[\Vert\hat{g}\Vert^2]=\sum_{i=1}^n\lambda_i^2p_i^{-1}+\sum_{i\neq j}\lambda_i\lambda_j\langle a_i,a_j\rangle$。
+引理1：$\mathbb{E}[\hat{g}]=g$且$\mathbb{E}[\Vert\hat{g}\Vert^2]=\sum_{i=1}^n\lambda_i^2p_i^{-1}+\sum_{i\neq j}\lambda_i\lambda_j\langle a_i,a_j\rangle$。
 
-令$\lambda=[\lambda_1,\dots,\lambda_n]^T,p=[p_1,\dots,p_n]^T$。为了确保该估计是稀疏的，我们固定某个稀疏预算$s$，使得$\sum_ip_i=s$。这是一个*平均稀疏度*约束。我们希望在该约束条件下最小化$\mathbb{E}[\Vert\hat{g}\Vert^2]$。由引理1，该问题等价于
+令$\lambda=[lambda_1,\dots,\lambda_n]^T, p=[p_1,\dots,p_n]^T$。为了确保该估计是稀疏的，我们固定某个稀疏预算$s$，使得$\sum_ip_i=s$。这是一个*平均稀疏度*约束。我们希望在该约束条件下最小化$\mathbb{E}[\Vert\hat{g}\Vert^2]$。由引理1，该问题等价于
 $$
 \min_p \sum_{i=1}^n\frac{\lambda_i^2}{p_i}\quad s.t.\forall i,0<p_i\leq 1,\sum_{i=1}^{n}p_i=s.
 $$
