测试公式显示

--- a/_posts/2020-11-13-ATOMO.md
+++ b/_posts/2020-11-13-ATOMO.md
@@ -8,7 +8,17 @@ catalog: true
 tags:
     - Sparse Communication
 ---
-
+<head>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {
+            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+            inlineMath: [['$','$']]
+            }
+        });
+    </script>
+</head>
 
 ## 前言
 
@@ -30,11 +40,11 @@ tags:
 ## 问题设定
 
 机器学习中的经验风险（empirical risk）定义为：
-\$$
+$$
 f(\omega)=\frac{1}{n}\sum_{i=1}^{n}\ell (\omega;x_i)
 $$
-其中$$x_i\in\mathbb{R}^d$$是第$$i$$个数据点。随机梯度方法是近似最小化$$f(\omega)$$的其中一个方法，该操作为：
-\$$
+其中$x_i\in\mathbb{R}^d$是第$i$个数据点。随机梯度方法是近似最小化$f(\omega)$的其中一个方法，该操作为：
+$$
 \omega_{k+1}=\omega_{k}-\gamma \hat{g}(\omega_{k})
 $$
 
